--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.7.1",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
@@ -19,8 +20,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
-    "zustand": "^4.4.1"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
