--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-cloudinary-lazy-image": "^1.3.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
