--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BE_URL = https://api.otixx.online
-# VITE_BE_URL = http://localhost:5000
+# VITE_BE_URL = https://api.otixx.online
+VITE_BE_URL = http://localhost:5000
