--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "yarn": "^1.22.21",
-    "zustand": "^4.4.6"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
