--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
+    "socket.io-client": "^4.7.4",
     "yarn": "^1.22.21",
     "zustand": "^4.5.0"
   },
