--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.10",
     "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
+    "socket.io-client": "^4.7.4",
     "yarn": "^1.22.21",
     "zustand": "^4.5.0"
   },
